--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg" href="/favicon.svg">
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg%20version%3D%221.1%22%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Asvg%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%20id%3D%22defs1%22%3E%3ClinearGradient%20id%3D%22linearGradient41%22%3E%3Cstop%20style%3D%22stop-color%3A%23800080%3Bstop-opacity%3A1%3B%22%20offset%3D%220%22%20id%3D%22stop41%22%20%2F%3E%3Cstop%20style%3D%22stop-color%3A%23800080%3Bstop-opacity%3A0%3B%22%20offset%3D%221%22%20id%3D%22stop42%22%20%2F%3E%3C%2FlinearGradient%3E%3ClinearGradient%20xlink%3Ahref%3D%22%23linearGradient41%22%20id%3D%22linearGradient42%22%20x1%3D%2296.090034%22%20y1%3D%220.33597913%22%20x2%3D%2295.082092%22%20y2%3D%22432.40518%22%20gradientUnits%3D%22userSpaceOnUse%22%20%2F%3E%3C%2Fdefs%3E%3Cg%20id%3D%22layer2%22%3E%3Cpath%20style%3D%22display%3Ainline%3Bfill%3Aurl(%23linearGradient42)%3Bfill-opacity%3A1%3Bstroke%3A%23000000%3Bstroke-opacity%3A0%22%20d%3D%22M%20-0.16764459%2C0%200.16764459%2C200%20200%2C200.16764%20V%200%20Z%22%20id%3D%22path2%22%20%2F%3E%3Cpath%20style%3D%22display%3Ainline%3Bfill%3A%23ffffff%3Bstroke%3A%23000000%3Bstroke-opacity%3A0%22%20d%3D%22m%20103.60436%2C40.569992%20-24.979046%2C11.735121%200.33529%2C10.896899%20-12.573345%2C3.520536%201.508801%2C7.711651%2010.896899%2C-0.335289%200.880134%2C63.74686%20c%200.162406%2C1.54285%200.06549%2C3.73402%200.628668%2C4.27493%200.882607%2C1.93202%201.114606%2C4.00862%202.891869%2C5.74183%201.392208%2C2.32132%202.653601%2C2.81122%203.939647%2C3.64627%201.877861%2C1.14964%203.377192%2C2.48855%206.077117%2C3.22716%201.977929%2C0.63747%204.003142%2C1.204%206.20285%2C1.5088%202.787186%2C0.0303%205.088826%2C-0.10125%207.208716%2C-0.29338%202.19105%2C-0.35448%204.28771%2C-0.77975%206.03521%2C-1.46689%20l%206.70578%2C-3.05951%205.69992%2C-3.3948%209.01089%2C-6.07712%201.88601%2C-1.46689%20-5.19699%2C-6.3705%20-5.19698%2C3.26908%20c%20-1.36707%2C0.75846%20-2.7169%2C1.55139%20-4.19111%2C2.09555%20l%20-2.51467%2C0.50294%20-2.05365%2C0.20956%20-1.29925-0.0419%20c%20-1.63115%2C0.0254%20-2.28885-0.16416%20-3.68818-0.33529%20-1.45292-0.27741%20-2.90584-0.47623%20-4.35876-1.5088%20-0.49297-0.3054%20-1.02082-0.71545%20-1.84409-2.01174%20-0.5331-0.51579%20-0.56561-1.28187%20-0.67057-2.01173%20-0.32021-1.14867%20-0.39791-1.44854%20-0.50294-1.84409%20l%20-0.33529-1.67645%20V%2075.440067%20l%2022.63202%2C0.670578%201.5088-13.914501%20-23.63788%2C1.676446%20z%22%20id%3D%22path1%22%20%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+    />
     <!-- https://github.com/darkreader/darkreader/blob/main/CONTRIBUTING.md#disabling-dark-reader-on-your-site -->
     <meta name="darkreader-lock" />
 
@@ -28,7 +32,10 @@
         let deltaLKlsl = deltaL / 1.0;
         let deltaCkcsc = deltaC / sc;
         let deltaHkhsh = deltaH / sh;
-        let i = deltaLKlsl * deltaLKlsl + deltaCkcsc * deltaCkcsc + deltaHkhsh * deltaHkhsh;
+        let i =
+          deltaLKlsl * deltaLKlsl +
+          deltaCkcsc * deltaCkcsc +
+          deltaHkhsh * deltaHkhsh;
         return i < 0 ? 0 : Math.sqrt(i);
       }
 
@@ -53,35 +60,38 @@
 
       // https://stackoverflow.com/questions/26414770/getting-the-rgb-values-for-a-css-html-named-color-in-javascript
       function cssColorToRgba(cssColor) {
-        var canvas = document.createElement('canvas');
-        var context = canvas.getContext('2d');
+        var canvas = document.createElement("canvas");
+        var context = canvas.getContext("2d");
         context.fillStyle = cssColor;
         context.fillRect(0, 0, 1, 1);
         return context.getImageData(0, 0, 1, 1).data;
       }
 
-      var defaultBackgroundColor = 'rgb(82, 86, 89)';
+      var defaultBackgroundColor = "rgb(82, 86, 89)";
       var previewBackgroundColor =
         getComputedStyle(document.documentElement).getPropertyValue(
-          '--vscode-sideBar-background',
+          "--vscode-sideBar-background",
         ) || defaultBackgroundColor;
 
-      var defaultToolbarFgColor = '#fff';
+      var defaultToolbarFgColor = "#fff";
       var previewToolbarFgColor =
-        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-foreground') ||
-        defaultToolbarFgColor;
+        getComputedStyle(document.documentElement).getPropertyValue(
+          "--vscode-menu-foreground",
+        ) || defaultToolbarFgColor;
 
       var previewForegroundColor = previewToolbarFgColor;
 
-      var defaultToolbarBorderColor = 'rgba(0, 0, 0, 0)';
+      var defaultToolbarBorderColor = "rgba(0, 0, 0, 0)";
       var previewToolbarBorderColor =
-        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-border') ||
-        defaultToolbarBorderColor;
+        getComputedStyle(document.documentElement).getPropertyValue(
+          "--vscode-menu-border",
+        ) || defaultToolbarBorderColor;
 
-      var defaultToolbarBgColor = 'rgb(50, 54, 57)';
+      var defaultToolbarBgColor = "rgb(50, 54, 57)";
       var previewToolbarBgColor =
-        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-background') ||
-        defaultToolbarBgColor;
+        getComputedStyle(document.documentElement).getPropertyValue(
+          "--vscode-menu-background",
+        ) || defaultToolbarBgColor;
 
       /// Perceptible distance between colors:
       /// 0~1: cannot distinguish by human eyes
@@ -94,23 +104,23 @@
 
       // append css variable --typst-preview-background-color
       document.documentElement.style.setProperty(
-        '--typst-preview-background-color',
+        "--typst-preview-background-color",
         previewBackgroundColor,
       );
       document.documentElement.style.setProperty(
-        '--typst-preview-foreground-color',
+        "--typst-preview-foreground-color",
         previewForegroundColor,
       );
       document.documentElement.style.setProperty(
-        '--typst-preview-toolbar-fg-color',
+        "--typst-preview-toolbar-fg-color",
         previewToolbarFgColor,
       );
       document.documentElement.style.setProperty(
-        '--typst-preview-toolbar-border-color',
+        "--typst-preview-toolbar-border-color",
         previewToolbarBorderColor,
       );
       document.documentElement.style.setProperty(
-        '--typst-preview-toolbar-bg-color',
+        "--typst-preview-toolbar-bg-color",
         previewToolbarBgColor,
       );
     </script>
@@ -177,8 +187,16 @@
 
             <span id="typst-toolbar-title"></span>
           </div>
-          <div id="typst-top-toolbar-center" class="flex-row" style="align-items: center"></div>
-          <div id="typst-top-toolbar-end" class="flex-row-rev" style="flex: 1; gap: 0.3rem">
+          <div
+            id="typst-top-toolbar-center"
+            class="flex-row"
+            style="align-items: center"
+          ></div>
+          <div
+            id="typst-top-toolbar-end"
+            class="flex-row-rev"
+            style="flex: 1; gap: 0.3rem"
+          >
             <div id="typst-page-next-selector" title="Next Page">
               <div class="typst-page-button">&gt;</div>
             </div>
@@ -188,11 +206,16 @@
                 style="--page-length-digits: 2"
                 title="Current Page"
               >
-                <input part="input" type="text" id="typst-page-selector" value="1" /><span
-                  class="typst-page-selector-divider"
-                  >&nbsp;/&nbsp;</span
-                >
-                <span class="typst-page-number-indicator" title="Total Pages"></span>
+                <input
+                  part="input"
+                  type="text"
+                  id="typst-page-selector"
+                  value="1"
+                /><span class="typst-page-selector-divider">&nbsp;/&nbsp;</span>
+                <span
+                  class="typst-page-number-indicator"
+                  title="Total Pages"
+                ></span>
               </div>
             </div>
             <div id="typst-page-prev-selector" title="Prev Page">
@@ -204,7 +227,9 @@
       <div id="typst-container-main">
         <div
           id="typst-app"
-          style="background-color: var(--typst-preview-background-color) !important"
+          style="
+            background-color: var(--typst-preview-background-color) !important;
+          "
         ></div>
       </div>
     </div>
@@ -220,7 +245,12 @@
           <div class="flex-row">
             <div
               class="flex-col"
-              style="flex: 20; min-width: 125px; align-items: flex-end; gap: 5px"
+              style="
+                flex: 20;
+                min-width: 125px;
+                align-items: flex-end;
+                gap: 5px;
+              "
             >
               <div class="key-binding-row">
                 <div class="key-binding-box">h</div>
@@ -248,25 +278,35 @@
             </div>
             <div style="flex: 10; max-width: 30px"></div>
             <div class="flex-col" style="flex: 70; gap: 5px">
-              <div class="key-binding-desc">Toggle the help panel (key bindings).</div>
               <div class="key-binding-desc">
-                Toggle content preview. <span style="color: orange">(Coming soon)</span>
+                Toggle the help panel (key bindings).
+              </div>
+              <div class="key-binding-desc">
+                Toggle content preview.
+                <span style="color: orange">(Coming soon)</span>
               </div>
               <div class="key-binding-desc">Goto the page by number.</div>
-              <div class="key-binding-desc">Switch to next animation or slide.</div>
-              <div class="key-binding-desc">Switch to previous animation or slide.</div>
+              <div class="key-binding-desc">
+                Switch to next animation or slide.
+              </div>
+              <div class="key-binding-desc">
+                Switch to previous animation or slide.
+              </div>
               <div class="key-binding-desc">
                 Switch to next slide.
                 <span style="color: orange"
                   >(currently just same as
-                  <span class="key-binding-box" style="margin: 0 2px">right</span>)</span
+                  <span class="key-binding-box" style="margin: 0 2px"
+                    >right</span
+                  >)</span
                 >
               </div>
               <div class="key-binding-desc">
                 Switch to previous slide.
                 <span style="color: orange"
                   >(currently just same as
-                  <span class="key-binding-box" style="margin: 0 2px">left</span>)</span
+                  <span class="key-binding-box" style="margin: 0 2px">left</span
+                  >)</span
                 >
               </div>
             </div>
