--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -32,10 +32,7 @@
         let deltaLKlsl = deltaL / 1.0;
         let deltaCkcsc = deltaC / sc;
         let deltaHkhsh = deltaH / sh;
-        let i =
-          deltaLKlsl * deltaLKlsl +
-          deltaCkcsc * deltaCkcsc +
-          deltaHkhsh * deltaHkhsh;
+        let i = deltaLKlsl * deltaLKlsl + deltaCkcsc * deltaCkcsc + deltaHkhsh * deltaHkhsh;
         return i < 0 ? 0 : Math.sqrt(i);
       }
 
@@ -60,38 +57,35 @@
 
       // https://stackoverflow.com/questions/26414770/getting-the-rgb-values-for-a-css-html-named-color-in-javascript
       function cssColorToRgba(cssColor) {
-        var canvas = document.createElement("canvas");
-        var context = canvas.getContext("2d");
+        var canvas = document.createElement('canvas');
+        var context = canvas.getContext('2d');
         context.fillStyle = cssColor;
         context.fillRect(0, 0, 1, 1);
         return context.getImageData(0, 0, 1, 1).data;
       }
 
-      var defaultBackgroundColor = "rgb(82, 86, 89)";
+      var defaultBackgroundColor = 'rgb(82, 86, 89)';
       var previewBackgroundColor =
         getComputedStyle(document.documentElement).getPropertyValue(
-          "--vscode-sideBar-background",
+          '--vscode-sideBar-background',
         ) || defaultBackgroundColor;
 
-      var defaultToolbarFgColor = "#fff";
+      var defaultToolbarFgColor = '#fff';
       var previewToolbarFgColor =
-        getComputedStyle(document.documentElement).getPropertyValue(
-          "--vscode-menu-foreground",
-        ) || defaultToolbarFgColor;
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-foreground') ||
+        defaultToolbarFgColor;
 
       var previewForegroundColor = previewToolbarFgColor;
 
-      var defaultToolbarBorderColor = "rgba(0, 0, 0, 0)";
+      var defaultToolbarBorderColor = 'rgba(0, 0, 0, 0)';
       var previewToolbarBorderColor =
-        getComputedStyle(document.documentElement).getPropertyValue(
-          "--vscode-menu-border",
-        ) || defaultToolbarBorderColor;
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-border') ||
+        defaultToolbarBorderColor;
 
-      var defaultToolbarBgColor = "rgb(50, 54, 57)";
+      var defaultToolbarBgColor = 'rgb(50, 54, 57)';
       var previewToolbarBgColor =
-        getComputedStyle(document.documentElement).getPropertyValue(
-          "--vscode-menu-background",
-        ) || defaultToolbarBgColor;
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-background') ||
+        defaultToolbarBgColor;
 
       /// Perceptible distance between colors:
       /// 0~1: cannot distinguish by human eyes
@@ -104,23 +98,23 @@
 
       // append css variable --typst-preview-background-color
       document.documentElement.style.setProperty(
-        "--typst-preview-background-color",
+        '--typst-preview-background-color',
         previewBackgroundColor,
       );
       document.documentElement.style.setProperty(
-        "--typst-preview-foreground-color",
+        '--typst-preview-foreground-color',
         previewForegroundColor,
       );
       document.documentElement.style.setProperty(
-        "--typst-preview-toolbar-fg-color",
+        '--typst-preview-toolbar-fg-color',
         previewToolbarFgColor,
       );
       document.documentElement.style.setProperty(
-        "--typst-preview-toolbar-border-color",
+        '--typst-preview-toolbar-border-color',
         previewToolbarBorderColor,
       );
       document.documentElement.style.setProperty(
-        "--typst-preview-toolbar-bg-color",
+        '--typst-preview-toolbar-bg-color',
         previewToolbarBgColor,
       );
     </script>
@@ -187,16 +181,8 @@
 
             <span id="typst-toolbar-title"></span>
           </div>
-          <div
-            id="typst-top-toolbar-center"
-            class="flex-row"
-            style="align-items: center"
-          ></div>
-          <div
-            id="typst-top-toolbar-end"
-            class="flex-row-rev"
-            style="flex: 1; gap: 0.3rem"
-          >
+          <div id="typst-top-toolbar-center" class="flex-row" style="align-items: center"></div>
+          <div id="typst-top-toolbar-end" class="flex-row-rev" style="flex: 1; gap: 0.3rem">
             <div id="typst-page-next-selector" title="Next Page">
               <div class="typst-page-button">&gt;</div>
             </div>
@@ -206,16 +192,11 @@
                 style="--page-length-digits: 2"
                 title="Current Page"
               >
-                <input
-                  part="input"
-                  type="text"
-                  id="typst-page-selector"
-                  value="1"
-                /><span class="typst-page-selector-divider">&nbsp;/&nbsp;</span>
-                <span
-                  class="typst-page-number-indicator"
-                  title="Total Pages"
-                ></span>
+                <input part="input" type="text" id="typst-page-selector" value="1" /><span
+                  class="typst-page-selector-divider"
+                  >&nbsp;/&nbsp;</span
+                >
+                <span class="typst-page-number-indicator" title="Total Pages"></span>
               </div>
             </div>
             <div id="typst-page-prev-selector" title="Prev Page">
@@ -227,9 +208,7 @@
       <div id="typst-container-main">
         <div
           id="typst-app"
-          style="
-            background-color: var(--typst-preview-background-color) !important;
-          "
+          style="background-color: var(--typst-preview-background-color) !important"
         ></div>
       </div>
     </div>
@@ -245,12 +224,7 @@
           <div class="flex-row">
             <div
               class="flex-col"
-              style="
-                flex: 20;
-                min-width: 125px;
-                align-items: flex-end;
-                gap: 5px;
-              "
+              style="flex: 20; min-width: 125px; align-items: flex-end; gap: 5px"
             >
               <div class="key-binding-row">
                 <div class="key-binding-box">h</div>
@@ -278,35 +252,25 @@
             </div>
             <div style="flex: 10; max-width: 30px"></div>
             <div class="flex-col" style="flex: 70; gap: 5px">
+              <div class="key-binding-desc">Toggle the help panel (key bindings).</div>
               <div class="key-binding-desc">
-                Toggle the help panel (key bindings).
-              </div>
-              <div class="key-binding-desc">
-                Toggle content preview.
-                <span style="color: orange">(Coming soon)</span>
+                Toggle content preview. <span style="color: orange">(Coming soon)</span>
               </div>
               <div class="key-binding-desc">Goto the page by number.</div>
-              <div class="key-binding-desc">
-                Switch to next animation or slide.
-              </div>
-              <div class="key-binding-desc">
-                Switch to previous animation or slide.
-              </div>
+              <div class="key-binding-desc">Switch to next animation or slide.</div>
+              <div class="key-binding-desc">Switch to previous animation or slide.</div>
               <div class="key-binding-desc">
                 Switch to next slide.
                 <span style="color: orange"
                   >(currently just same as
-                  <span class="key-binding-box" style="margin: 0 2px"
-                    >right</span
-                  >)</span
+                  <span class="key-binding-box" style="margin: 0 2px">right</span>)</span
                 >
               </div>
               <div class="key-binding-desc">
                 Switch to previous slide.
                 <span style="color: orange"
                   >(currently just same as
-                  <span class="key-binding-box" style="margin: 0 2px">left</span
-                  >)</span
+                  <span class="key-binding-box" style="margin: 0 2px">left</span>)</span
                 >
               </div>
             </div>
